libs/wingc/src/lsp/snapshots/hovers/ignoe_empty_lines_in_doc.snap
---
source: libs/wingc/src/lsp/hover.rs
---
contents:
  kind: markdown
  value: "```wing\nclass Foo {\n  // No public members\n}\n```\n---\nClass doc with empty lines after it"
range:
  start:
    line: 3
    character: 8
  end:
    line: 3
    character: 11

