libs/wingc/src/lsp/snapshots/hovers/inside_class_field.snap
---
source: libs/wingc/src/lsp/hover.rs
---
contents:
  kind: markdown
<<<<<<< HEAD
  value: "```wing\npreflight my_bucket: Bucket\nclass Bucket\n```\n---\nRepresents a cloud object store."
=======
  value: "```wing\npreflight my_bucket: Bucket\n```\n---\n```wing\nclass Bucket\n```\n---\nA cloud object store."
>>>>>>> d1f91987b83178dcb304f9093596a20e27c8e5e5
range:
  start:
    line: 3
    character: 2
  end:
    line: 3
    character: 11

