libs/wingc/src/lsp/snapshots/hovers/static_method_root.snap
---
source: libs/wingc/src/lsp/hover.rs
---
contents:
  kind: markdown
  value: "```wing\nclass Json\n```\n---\nImmutable Json.\n\n### Methods\n- `asBool` — Convert Json element to boolean if possible.\n- `asNum` — Convert Json element to number if possible.\n- `asStr` — Convert Json element to string if possible.\n- `deepCopy` — Creates an immutable deep copy of the Json.\n- `deepCopyMut` — Creates a mutable deep copy of the Json.\n- `delete` — Deletes a key in a given Json.\n- `entries` — Returns the entries from the Json.\n- `get` — Returns the value associated with the specified Json key.\n- `getAt` — Returns a specified element at a given index from Json Array.\n- `has` — Checks if a Json object has a given key.\n- `keys` — Returns the keys from the Json.\n- `parse` — Parse a string into a Json.\n- `stringify` — Formats Json as string.\n- `tryAsBool` — Convert Json element to boolean if possible.\n- `tryAsNum` — Convert Json element to number if possible.\n- `tryAsStr` — Convert Json element to string if possible.\n- `tryGet` — Optionally returns an specified element from the Json.\n- `tryGetAt` — Optionally returns a specified element at a given index from Json Array.\n- `tryParse` — Try to parse a string into a Json.\n- `values` — Returns the values from the Json."
range:
  start:
    line: 1
    character: 0
  end:
    line: 1
    character: 4

